2012-05-08
* add filtering capabilities to GUI

2012-05-07
* fix edge case in Java deserialisation
* add function name match reporting to GUI

2012-05-06
* enable function name scanning in ranking method
* fix and enable gzip verifier in prerun.py

2012-05-04
* introduce LZMA_MINIMUM_SIZE parameter to set minimum size of results of for
LZMA unpacking. This is to reduce false positives.
* add simplistic verifier for ELF files. This is to reduce false positives in
LZMA scanning.

2012-05-03
* rework bruteforce.py so it is easier to make different frontends
* introduce "enable" configuration directive. This will make it easier for a
graphical frontend to enable/disable checks

2012-05-02
* add very simplistic verifier for MP4 files to reduce false positives
further. Only works on a subset of files for now
* add first version of a graphical viewer of results made with BAT
* add stubs for extra method for scanning dynamically linked binaries, by
searching for function names. Prepare rest of the code for the change.

2012-04-24
* tagging 7.0

2012-04-18
* set a maximum size for picture generation: if file is bigger than a certain
size no picture ("tv static") will be generated.
* outcomment code for generating thumbnails for now
* set a maximum size for hexdump generation: if file is bigger than a certain
size no hexdump will be generated.

2012-04-17
* replace glob.glob() with our own filtering. This prevents os.listdir() from
being called numerous times
* very simplistic check for tagging Ogg files, needs vorbis-tools.

2012-03-29
* add a very simplistic method to tag binary XML for Android (file name check,
plus the first four bytes)

2012-03-26
* add tool to check whether or not a binary + libraries can be combined at
runtime
* replace piechart generation using external script and pychart with
matplotlib. It's faster, doesn't require an external script and better fits
the license.

2012-03-24
* remove unused and no longer maintained file

2012-03-21